--- a/js_api/package.json
+++ b/js_api/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@polkadot/api": "^5.8.3",
     "@polkadot/extension-dapp": "^0.39.3",
+    "@polkadot/types": "^6.1.2",
     "@polkadot/ui-shared": "0.85.1",
     "@walletconnect/client": "2.0.0-alpha.26",
     "bn.js": "^5.1.2",
