--- a/js_api/package.json
+++ b/js_api/package.json
@@ -33,6 +33,7 @@
     "@polkadot/ui-shared": "0.85.1",
     "@walletconnect/client": "2.0.0-alpha.26",
     "bn.js": "^5.1.2",
+    "is-array-buffer": "^2.0.0",
     "oo7-substrate": "^0.8.0",
     "process": "^0.11.10",
     "secp256k1": "^3.8.0",
