--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ flutter:
      - assets/index.html
      - js_api/dist/main.js
      - js_as_extension/dist/main.js
+     - assets/wasm/sleeve.wasm
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
