--- a/js_api/package.json
+++ b/js_api/package.json
@@ -44,6 +44,7 @@
     "@polkadot/wasm-crypto": "^4.1.2",
     "@walletconnect/client": "2.0.0-alpha.26",
     "bn.js": "^5.1.2",
+    "buffer": "^6.0.3",
     "is-array-buffer": "^2.0.0",
     "oo7-substrate": "^0.8.0",
     "process": "^0.11.10",
